--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg-mongoose": "^3.2.0",
     "egg-only": "^0.0.1",
     "egg-scripts": "^2.11.0",
+    "image-size": "^0.8.3",
     "qiniu": "^7.2.2"
   },
   "devDependencies": {
